Update : author , Modified : javascript Post , layout sidebar,post html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,6 +13,10 @@
         <a href="{{ site.url }}/">home</a>
         <span>/</span>
       </li>
+      <li class="nav-item">
+        <a href="{{ site.url }}/articles/1992-04/author">author</a>
+        <span>/</span>
+      </li>
       {% for page in site.pages %} {% if page.title %}
       <li class="nav-item">
         <a href="{{ site.url }}{{ page.url }}">{{ page.title }}</a>
