--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 ---
-
 <a class="btn" href= "{{ site.url }}/" >
-  Home
+  Back
 </a>
 {% if page.image.feature %}
 <div class="post-image-feature">
