Update : Cover Img & Font Color

--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -1,3 +1,4 @@
+
 /*
  * Global Variables
  */
@@ -52,6 +53,7 @@ $hr-border-width:             $border-width;
 //
 
 $text-color:       rgba(0, 0, 0, 0.87) !default;
+$cover-text-color: #ffffff;
 $background-color: #f5f5f5;
 
 $white:            #fff;
