--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -1,6 +1,8 @@
 /* LAYOUT CSS */
 .cover {
-  background-color: $background-color;
+  // background-color: $background-color;
+  background-image: url("/img/cover.jpg");
+  background-position: center;
   position: fixed;
   text-align: center;
   width: 100%;
@@ -18,7 +20,7 @@
   }
 }
 .cover-card {
-  color: $text-color;
+  color: $cover-text-color;
   padding: 0 30px;
   .avatar {
     border-radius: 50%;
@@ -28,14 +30,14 @@
   }
   .author_name {
     display: block;
-    color: $text-color;
+    color: $cover-text-color;
     font-size: 1.75em;
     font-weight: 600;
     text-transform: capitalize;
   }
   .author_job {
     display: block;
-    color: lighten($text-color, 35%);
+    color: lighten($cover-text-color, 35%);
     font-size: 0.8em;
     font-weight: 700;
     text-transform: uppercase;
@@ -61,10 +63,10 @@
       display: inline-block;
       margin-left: 1em;
       a.social-link-item {
-        color: $secondary;
+        color: $white;
         &:hover,
         &:focus {
-          color: lighten($secondary, 14%);
+          color: lighten($success, 14%);
         }
       }
     }
@@ -81,11 +83,11 @@
     & a {
       margin-top: 1em;
       text-transform: lowercase;
-      font-size: 85%;
-      color: $secondary;
+      font-size: 100%;
+      color: $white;
       &:hover,
       &:focus {
-        color: lighten($secondary, 14%);
+        color: lighten($success, 14%);
       }
     }
   }
