--- a/_includes/js.html
+++ b/_includes/js.html
@@ -12,3 +12,10 @@
   ga('send', 'pageview');
 </script>
 {% endif %}
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-1829817529831781",
+    enable_page_level_ads: true
+  });
+</script>
