--- a/_includes/js.html
+++ b/_includes/js.html
@@ -19,3 +19,13 @@
     enable_page_level_ads: true
   });
 </script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- nesoy -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1829817529831781"
+     data-ad-slot="7543380157"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
