Apply : Google AdSense

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,13 @@
 <footer>
   &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://github.com/renyuanz/leonids/">leonids theme</a> made with <i class="fa fa-heart heart-icon"></i>
 </footer>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- nesoy -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1829817529831781"
+     data-ad-slot="7543380157"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
