Modify Google Ad location

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,3 +11,11 @@
 <script type="text/javascript"
 src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+<!-- NESOY -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-1829817529831781",
+    enable_page_level_ads: true
+  });
+</script>
