Apply Google Ad

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,25 @@
 <footer>
   &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://github.com/renyuanz/leonids/">leonids theme</a> made with <i class="fa fa-heart heart-icon"></i>
 </footer>
-<script type="text/javascript">
+
+<!-- 넓은광고 -->
+<!-- <script type="text/javascript">
     google_ad_client = "ca-pub-1829817529831781";
     google_ad_slot = "8740911754";
     google_ad_width = 728;
     google_ad_height = 90;
 </script>
-<!-- 넓은광고 -->
 <script type="text/javascript"
 src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-<!-- NESOY -->
+</script> -->
+
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- nesoy -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1829817529831781"
+     data-ad-slot="7543380157"
+     data-ad-format="auto"></ins>
 <script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-1829817529831781",
-    enable_page_level_ads: true
-  });
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
