--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -113,7 +113,7 @@
               {% endfor %}
             </span>
           {% endif %}
-
+          {% include _third-party/adsense/adsense.html %}
           {% if post.comments %}
             {% if site.duoshuo_shortname or site.duoshuo and site.duoshuo.shortname %}
               <span class="post-comments-count">
