Update Adsense Location

--- a/_includes/_partials/header.html
+++ b/_includes/_partials/header.html
@@ -75,6 +75,7 @@
       {% include _partials/search.html %}
     </div>
   {% endif %}
+  {% include _third-party/adsense/adsense.html %}
 </nav>
 
 {% include _custom/header.html %}
