--- a/_includes/_macro/sidebar.html
+++ b/_includes/_macro/sidebar.html
@@ -101,9 +101,9 @@
                 <a href="{{ link }}" target="_blank" title="{{ name }}">
                   {% if site.social_icons.enable %}
                     <i class="fa fa-fw fa-{{ site.social_icons[name] | default: 'globe' | downcase }}"></i>
-                    <br>
+                    <!-- <br> -->
                   {% endif %}
-                  {{ name }}
+                  <!-- {{ name }} -->
                 </a>
               </span>
             {% endfor %}
