Update AdSense Width

--- a/_includes/_third-party/adsense/adsense.html
+++ b/_includes/_third-party/adsense/adsense.html
@@ -4,7 +4,9 @@
      style="display:block"
      data-ad-client="ca-pub-1829817529831781"
      data-ad-slot="7543380157"
-     data-ad-format="auto"></ins>
+     data-ad-format="auto"
+     data-full-width-responsive="false"
+     ></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
