--- a/_includes/_third-party/adsense/banner_adsense.html
+++ b/_includes/_third-party/adsense/banner_adsense.html
@@ -1,6 +1,6 @@
 <script>
     window.onload = function inVisibleAdInMobileDevice() {
-        if (window.outerWidth >= 479) {
+        if (window.outerWidth <= 479) {
             document.getElementById('banner-ads').style.display = "none";
         }
     }
