--- a/_includes/_third-party/comments/Utterance.html
+++ b/_includes/_third-party/comments/Utterance.html
@@ -1,6 +1,6 @@
 <script src="https://utteranc.es/client.js"
         repo="nesoy/blog-comments"
-        issue-term="pathname"
+        issue-term="url"
         theme="github-light"
         crossorigin="anonymous"
         async>
