Update Nesoy Comment System

--- a/_includes/_third-party/comments/Utterance.html
+++ b/_includes/_third-party/comments/Utterance.html
@@ -1,7 +1,7 @@
 <script src="https://utteranc.es/client.js"
-        repo="nesoy/blog-comments"
-        issue-term="url"
-        theme="github-light"
+        repo="NESOY/blog-comments"
+        issue-term="pathname"
+        theme="github-dark"
         crossorigin="anonymous"
         async>
 </script>
