--- a/_includes/_third-party/comments/Utterance.html
+++ b/_includes/_third-party/comments/Utterance.html
@@ -1,7 +1,7 @@
 <script src="https://utteranc.es/client.js"
         repo="NESOY/blog-comments"
         issue-term="pathname"
-        theme="github-dark"
+        theme="github-light"
         crossorigin="anonymous"
         async>
 </script>
